# wollok-jupyter-kernel

./: .gitignore  .markdownlint.json  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  deploy_pypi.sh  hatch_build.py  install_kernel.sh  kernel.json  package-lock.json  pyproject.toml  uninstall_kernel.sh
.github/workflows/: publish.yml  test.yml
dev/: Python.code-profile
images/: wollok-jupyter-logo.xcf
test/: test_wollok.py
wollok_kernel/: __init__.py  __main__.py  kernel.py
wollok_kernel/wollok_bridge/: library.py  package-lock.json  package.json  wollok.js
wollok_kernel/wollok_bridge/polyfills/crypto/: index.js
wollok_kernel/wollok_ts/: is_odd.py  library.py  package-lock.json  package.json  sha256.js  wollok.js
